
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct wlr_surface {int dummy; } ;
struct wlr_box {int dummy; } ;
struct sway_output {int dummy; } ;



__attribute__((used)) static void count_surface_iterator(struct sway_output *output,
  struct wlr_surface *surface, struct wlr_box *_box, float rotation,
  void *data) {
 size_t *n = data;
 (*n)++;
}
